# boostcamp_ragpractice

./: .gitignore  README.md  insert2db.py  main.py  pyproject.toml  test_vector_search.py  xml_parser.py
data/: docs_emb.json  embeddings_.npy
qdrant/: index_qdrant.py  query_qdrant.py
